# SimpleLocalAI

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/: apple-foundation-helper.swift
simplelocalai/: __init__.py  __main__.py  app.py  config.py  doctor.py  models.py
tests/: test_app_helpers.py  test_config.py  test_ollama_stream.py
