[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "simplelocalai"
version = "0.1.0"
description = "A small local-only terminal chat app for switching between Apple Foundation Models and Qwen via Ollama."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "SimpleLocalAI" }]
license = { text = "MIT" }

[project.scripts]
simplelocalai = "simplelocalai.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["simplelocalai*"]

